# mcp-gateway

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json  server_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: codebase.md
src/mcp_gateway/: __init__.py  config_loader.py  main.py  mcp_server.py  models.py
src/mcp_gateway/server/: registry.py
src/mcp_gateway/storage/: base.py  redis.py
src/mcp_gateway/tools/: __init__.py  router.py  search.py
src/mcp_orchestrator/: __init__.py  config_loader.py  main.py  mcp_server.py  models.py
src/mcp_orchestrator/server/: registry.py
src/mcp_orchestrator/storage/: base.py  memory.py
src/mcp_orchestrator/tools/: __init__.py  router.py  search.py
stdio_server/: server.py
tests/: __init__.py  test_integration.py  test_models.py  test_registry.py  test_search.py  test_storage.py
