[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-orchestrator"
version = "0.1.2"
description = "Orchestrates multiple MCP servers with unified tool search (BM25/regex) and deferred loading"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Roop", email = "is.rupinder23@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "claude", "claude-desktop", "tool-aggregation", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastmcp>=2.14.0",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "whoosh>=2.7.4",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
]

[project.scripts]
mcp-orchestrator = "mcp_orchestrator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
